<resources>
    <dimen name="photo_width">110dp</dimen>
    <dimen name="photo_height">110dp</dimen>
    <string name="app_name">Tempo</string>
    <string name="title_activity_home">Home</string>

    <string name="selectcountry"> Select Location</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="aboutus"> عشان تعمل إعلان مميز برجاء التواصل مع خدمة العملاء على رقم 01000057220
    </string>

    <string name="aboutt">About Us</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>

    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>

    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>

    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>

    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>

    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>

    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>

    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>

    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Logged in !</string>
    <string name="signed_out">You are not logged in !</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Login</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>

    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>

    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>

    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>

    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>

    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="btn_ok">موافق</string>
    <string name="btn_pick_mul">Pick From Gallery (Multiple)</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="time_ago_prefix"></string>

    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_hours">about %d hours</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">about a year</string>
    <string name="time_ago_years">%d years</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="city">اختر المحافظة</string>
    <string name="login_face">Login With Facebook</string>
    <string name="welcome">Welcome To Tempo</string>
    <string name="work">Work From Home</string>
    <string name="facebook_app_id">228882291703789</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="location">Location</string>
    <string name="product_name">Product Name</string>
    <string name="desc">Description</string>
    <string name="phone">Mobile Number</string>
    <string name="share">Share</string>
    <string name="price">Price</string>
    <string name="select_image">Select Image</string>
    <string name="validate_phone">Please Insert Phone</string>
    <string name="review_post">Post has been added, please wait review</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgetpas">Forget Password ?</string>
    <string name="login">LOGIN</string>
    <string name="or">Or</string>
    <string name="loginface">LOGIN WITH FACEBOOK</string>
    <string name="noacc">Don\'t Have An Account?</string>
    <string name="signupnow">SIGN UP NOW</string>
    <string name="fullname">Full Name</string>
    <string name="policy">Terms &amp; Conditions</string>
    <string name="data_policty">This application is only an advertisement platform and is not responsible for interactions between users either financially or physically,</string>
    <string name="register">Register</string>
    <string name="indvidual">Individual</string>
    <string name="company">Company</string>
    <string name="major">Major</string>
    <string name="years">Years of experience</string>
    <string name="c_name">Company Name</string>
    <string name="f_name">Full Time</string>
    <string name="p_time">Part Time</string>
    <string name="skills">Skills</string>
    <string name="subject">Subject</string>
    <string name="home">Home</string>
    <string name="myposts">My Posts</string>
    <string name="messages">Inbox</string>
    <string name="contact">Contact Us</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="feildempty">Fill input with valid data</string>
    <string name="invalidemail">Please Enter Valid Email</string>
    <string name="enterpas">Please Enter Valid Password</string>
    <string name="alreadyuser">This User Already Exist</string>
    <string name="checked">Please Make Sure That You Check Privacy</string>
    <string name="log_out">Log Out</string>
    <string name="title">Title</string>
    <string name="descrip">Description</string>
    <string name="delete_post">Do You want to delete this post ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="validate_city">Please Make Sure That You Select Country First</string>
    <string name="validate_data">Please Fill All Inputs</string>
    <string name="currency">Currency</string>
    <string name="fogetpassword">Do you forget your Password ?</string>
    <string name="reset">Reset</string>
    <string name="reseet">Reset password code has been emailed to</string>
    <string name="invalidemaail">Invalid Email , try later</string>
    <string name="adv">Advertise with us</string>
    <string name="customer">Customer Service</string>
    <string name="chat"> Chat With Us</string>
    <string name="click_here">Click Here</string>
    <string name="save">Save edits</string>
    <string name="savedsucces">Edits saved successfully</string>
    <string name="p_service">Present a Service</string>
    <string name="r_service">Request a Service</string>
    <string name="type_message">Type Your Message</string>
    <string name="specialad">Featured ad</string>
    <string name="received_newpost">New Ad From tempo Users </string>
    <string name="block">Block</string>
    <string name="unblock">Un block</string>
    <string name="blockedhim">You blocked this person You cannot message him in this chat</string>
    <string name="blockedyou">This person is Not available for you</string>

    <string-array name="types">
        <item>Present a service </item>
        <item>Request a service</item>
    </string-array>
</resources>
